cleanup in preparation for alpha release